tests/ui/traits/inductive-overflow/lifetime.stderr
error[E0275]: overflow evaluating the requirement `Box<X<C<'static>>>: NotAuto`
  --> $DIR/lifetime.rs:29:5
   |
LL |     is_send::<X<C<'static>>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required for `X<C<'static>>` to implement `NotAuto`
  --> $DIR/lifetime.rs:19:12
   |
LL | impl<T: Y> NotAuto for X<T> where T::P: NotAuto {}
   |            ^^^^^^^     ^^^^             ------- unsatisfied trait bound introduced here
note: required by a bound in `is_send`
  --> $DIR/lifetime.rs:23:15
   |
LL | fn is_send<S: NotAuto>() {}
   |               ^^^^^^^ required by this bound in `is_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
